@@ -64,6 +64,7 @@
             streams/textstreamtest.cpp
             streams/zlibstream.cpp
             textfile/textfiletest.cpp
+            thread/atomic.cpp
             uris/uris.cpp
         </sources>
         <wx-lib>net</wx-lib>
